# maoloader

./: .gitignore  README.md  maoloader.json
.dist/maoloader/: latest.json
app/: .gitignore  README.md  package.json  svelte.config.js  vite.config.js
app/src/: app.html
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.release.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/runtime/: preload.js  preload.test.js
app/src-tauri/src/: config.rs  league_client.rs  lib.rs  main.rs  native_core.rs  plugins.rs  runtime.rs  shell.rs  store.rs  windows.rs
app/src/lib/: app-state.svelte.ts
app/src/routes/: +layout.svelte  +page.svelte  layout.css
dll/: Cargo.toml  build.rs  module.def
dll/src/: assets.rs  cef.rs  cef_types.rs  config.rs  core.rs  datastore.rs  dllproxy.rs  dylib.rs  hook.rs  inject.rs  lib.rs  platform.rs  plugins.rs  process_hook.rs  riotclient.rs  trace.rs  v8_native.rs
examples/plugins/maoloader-example/: README.md  index.js  maoloader.json  maoloader.plugin.json  styles.css
maoloader-testkit/: README.md  index.js  styles.css
plugin-example/: README.md  index.js  styles.css
scripts/: build-core.ps1  check-core-exports.ps1  install-testkit-plugin.ps1  package-release-local.ps1  package-release.ps1  smoke-inject-core.ps1  smoke-league-client.ps1
web/: README.md  drizzle.config.ts  package.json  svelte.config.js  wrangler.jsonc
web/migrations/: 0000_uneven_firestar.sql
web/migrations/meta/: 0000_snapshot.json  _journal.json
web/src/: app.d.ts  worker-configuration.d.ts
(+37 files in other folders)
